# geodenoising

./: .gitignore  README.md  environment.yml  setup.cfg
.github/workflows/: python-app.yml
datasets_prep/: 20221213 huggingface xarray dataset.ipynb  20221214 pipelines.ipynb  20221214 zen3geo LES dataset.ipynb  20221215 n2v masked pipeline.ipynb  20230109 n2v masked pipeline.ipynb  copy-from-leeds.sh
geodenoising/: benchmark.py  train.py
geodenoising/data/: datapipes.py  les_benchmark.py
geodenoising/models/: __init__.py  models.py
geodenoising/models/n2v/: __init__.py  input.py  loss.py
geodenoising/models/ssdn/: README.md  __init__.py  data_format.py  noise_network.py  utility.py
tests/: test_benchmark.py
