[metadata]
name = geodenoising
version = attr: geodenoising.__version__
author = Leif Denby
author_email = leif@denby.eu
description = Denoising for geophysical applications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leifdenby/geodenoising

[options]
packages=find:
install_requires =
  numpy

setup_requires = setuptools_scm

[options.packages.find]
where=.

[options.extras_require]
test =
  pytest
  nbval
  nb-black
dev =
  jupyterlab
  %(test)s
  pre-commit
  ipython

[isort]
profile=black

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
