[metadata]
name = geodenoising
version = attr: geodenoising.__version__
author = Leif Denby
author_email = leif@denby.eu
description = Denoising for geophysical applications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leifdenby/geodenoising

[options]
packages=find:
install_requires =
  numpy
  pytorch-lightning
  xarray
  netcdf4
  zen3geo

setup_requires = setuptools_scm

[options.packages.find]
where=.

[options.extras_require]
test =
  pytest
  nbval
  nb-black
dev =
  jupyterlab
  %(test)s
  pre-commit
  ipython

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]

[flake8]
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    E731 # do not assign a lambda expression, use a def
    W503 # line break before binary operator
    E741 # ambigious name
    C901 # function is too complex
exclude=
    .eggs
    doc
per-file-ignores = __init__.py:F401
# settings for using flake8 with black:
max-line-length = 88
extend-ignore = E203

[pylint]
ignore=CVS


[pylint.typecheck]
# List of members which are set dynamically and missed by Pylint inference
# system, and so shouldn't trigger E1101 when accessed.
generated-members=numpy.*,torch.*
# allow 1 or 2 length variable names, https://stackoverflow.com/a/69048835/271776
good-names-rgxs=^[_a-z][_a-z0-9]?$

[pylint.messages control]
disable=missing-docstring,empty-docstring,too-many-locals,too-many-arguments,abstract-method,unused-import,arguments-differ,too-many-ancestors,too-many-instance-attributes,import-outside-toplevel


[isort]
profile = black
skip_gitignore = true
force_to_top = true
default_section = THIRDPARTY
known_first_party = convml_data
